default/homepage/homepage.Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  labels:
    app.kubernetes.io/name: homepage
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: homepage
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homepage
    spec:
      serviceAccountName: homepage
      automountServiceAccountToken: true
      containers:
        - env:
            - name: HOMEPAGE_ALLOWED_HOSTS
              value: home.elkiaer.net
            - name: HOMEPAGE_VAR_OPNSENSE_KEY
              valueFrom:
                secretKeyRef:
                  name: homepage
                  key: opnsense-key
            - name: HOMEPAGE_VAR_OPNSENSE_SECRET
              valueFrom:
                secretKeyRef:
                  name: homepage
                  key: opnsense-secret
          name: homepage
          image: ghcr.io/gethomepage/homepage:v2.5.0@sha256:57c4a0531937889c0b968b120fe9c2560bbe036b5c9e18c49a9e2479de9975d1
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /mnt/data
              readOnly: true
            - name: homepage-config
              mountPath: /app/config
            - name: logs
              mountPath: /app/config/logs
          imagePullPolicy: Always
      volumes:
        - name: data
          hostPath:
            path: /mnt/data
            type: Directory
        - name: homepage-config
          configMap:
            name: homepage
        - name: logs
          emptyDir: {}
