default/homepage/dummy.IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dummy
  namespace: default
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - kind: Rule
    match: Host(`dummy.home.elkiaer.net`)
    services:
    - kind: TraefikService
      name: api@internal
